# tasteless

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json
demo/: build_artifacts.py  build_hierarchy.py  dashboard.fixed.html  dashboard.html  hierarchy.fixed.html  hierarchy.html  landing.fixed.html  landing.html  login.fixed.html  login.html  pricing.fixed.html  pricing.html  record.py  settings.fixed.html  settings.html  showcase.html  warmup.py
demo/flow/: cart.html  checkout.html  index.fixed.html  index.html  product.html  shop.html
examples/: tasteless.config.yaml
plugins/tasteless/.claude-plugin/: plugin.json
plugins/tasteless/skills/tasteless/: SKILL.md
tasteless/: __init__.py  audit.py  color.py  measure.py  report.py  shoot.py
