[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tasteless-ux"
version = "0.1.0"
description = "Audit a rendered UI against the laws of UX and auto-fix the violations. It doesn't have taste; it has citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Santiago Munoz" }]
keywords = ["design", "ux", "accessibility", "wcag", "fitts", "css", "audit"]
dependencies = [
  "playwright>=1.40",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "timm>=1.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "pyyaml>=6.0",
  "pillow>=10.0",
]

[project.scripts]
tasteless-shoot = "tasteless.shoot:main"
tasteless-audit = "tasteless.audit:main"
tasteless-measure = "tasteless.measure:main"

[project.urls]
Homepage = "https://github.com/ryuxik/tasteless"

[tool.setuptools]
packages = ["tasteless"]
