[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tasteless-ux"
version = "0.1.0"
description = "Audit a rendered UI against the laws of UX and auto-fix the violations. It doesn't have taste; it has citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Santiago Munoz" }]
keywords = ["design", "ux", "accessibility", "wcag", "fitts", "css", "audit"]
# Core = the audit + fix loop. Light + fast (no torch).
dependencies = [
  "playwright>=1.40",
  "numpy>=1.24",
  "pillow>=10.0",
  "pyyaml>=6.0",
]

# The DINOv2 visual-hierarchy heatmap is the ONE heavy, optional module.
#   pip install "tasteless-ux[hierarchy]"
[project.optional-dependencies]
hierarchy = ["torch>=2.1", "torchvision>=0.16", "timm>=1.0", "opencv-python-headless>=4.8"]

[project.scripts]
tasteless-shoot = "tasteless.shoot:main"
tasteless-audit = "tasteless.audit:main"
tasteless-measure = "tasteless.measure:main"

[project.urls]
Homepage = "https://github.com/ryuxik/tasteless"

[tool.setuptools]
packages = ["tasteless"]
